--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
-  <head><title>tokmak-07.githib.io</title> </head>
+  <head><title>
+    <script src="https://telegram.org/js/telegram-web-app.js"></script>
+    tokmak-07.githib.io</title> </head>
   <body>
 <div>umar</div>
 ggg
