--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 <html>
   <head><title>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
+    
     tokmak-07.githib.io</title> </head>
   <body>
 <div>umar</div>
 ggg
-    
+    <script>
+alert(window.Telegram.WebApp.initData)
+
+    </script>
   </body>
 </html>
