--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
-  <head><title>
+  <head>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     
-    tokmak-07.githib.io</title> </head>
+    <title> tokmak-07.githib.io</title> </head>
   <body>
 <div>umar</div>
 
